# NiftyApp

./: CMakeLists.txt  README.md  vcpkg.json
src/: NiftyAppExample.cpp  main.cpp
src/include/: NiftyAppExample.h
